Fix: LessonManagement